- Lots of markup corrections, in scripts and templates, for XHTML compliance
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/acqui-search-result.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/acqui-search-result.tmpl
@@ -15,7 +15,7 @@ function GetIt(aqbooksellerid,name)
 
 <div id="doc" class="yui-t7">
    <div id="bd">
-	<div class="yui-g">
+	
 
 <h1>Supplier Search Results</h1>
 <h2>You searched on <b>supplier <!-- TMPL_VAR name="supplier" -->,</b> <!-- TMPL_VAR name="count" --> results found</h2>
@@ -35,11 +35,8 @@ function GetIt(aqbooksellerid,name)
 </table>
 <!-- /TMPL_IF -->
 
-    <p><a href="javascript:back();">Perform a new search</a></p>
+    <p><a href="/cgi-bin/koha/serials/acqui-search.pl">Perform a new search</a></p>
 
-
-</div>
-</div>
 </div>
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
