--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/viewalerts.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/viewalerts.tmpl
@@ -4,13 +4,13 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!--TMPL_INCLUDE NAME="menu-serials.inc" -->
+<!-- TMPL_INCLUDE NAME="serials-search.inc" -->
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <h1>Alert subscribers for <!-- TMPL_VAR name="bibliotitle" --></h1>
 		<a href="subscription-detail.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->" class="button">subscription</a>
@@ -33,7 +33,9 @@
 		<!-- /TMPL_IF -->
 </div>
 </div>
-</div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="serials-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
