--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/distributedto.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/distributedto.tmpl
@@ -2,7 +2,8 @@
 <title>Koha &rsaquo; Serials &rsaquo; Select Supplier</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <script language="javascript" type="text/javascript">
-		// GPL code coming from PhpMyAdmin
+//<![CDATA[
+// GPL code coming from PhpMyAdmin
 		function insertValueQuery() {
 			var myQuery = document.Aform.distributedto;
 			var myListBox = document.Aform.borlist;
@@ -41,21 +42,21 @@
 			document.Aform.SaveList.value="1";
 			document.Aform.submit();
 		}
+	//]]>
 	</script>
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!--TMPL_INCLUDE NAME="menu-serials.inc" -->
+<!-- TMPL_INCLUDE NAME="serials-search.inc" -->
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 	<h1>Select borrowers or enter manually the names</h1>
-	<p>
-		<form action="/cgi-bin/koha/serials/distributedto.pl" method="post" name="Aform">
+	<form action="/cgi-bin/koha/serials/distributedto.pl" method="post" name="Aform">
 			<table>
 			<tr>
 			<td>
@@ -67,9 +68,9 @@
 				<p>
 					<textarea name="distributedto" rows="15" cols="30"><!-- TMPL_VAR name="distributedto" --></textarea>
 				</p>
-				<p>
+				
 					<!-- TMPL_IF name="save" -->
-						saved</p>
+						<p>saved</p>
 					<!-- /TMPL_IF -->
 					<input type="hidden" name="SaveList" value="0" />
 					<input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR name="subscriptionid" -->" />
@@ -80,24 +81,24 @@
 			<tr>
 			<td>
 				<!-- TMPL_VAR NAME="borrowername" -->
-				<select name="borlist" size="15">
+				<!-- TMPL_IF NAME="borlist" --><select name="borlist" size="15">
 					<!-- TMPL_LOOP name="borlist" -->
 						<option value="<!-- TMPL_VAR name="surname" --><!-- TMPL_VAR name="firstname" -->">
 							<!-- TMPL_VAR name="surname" --> <!-- TMPL_VAR name="firstname" -->
 						</option>
 					<!-- /TMPL_LOOP -->
-				</select>
+				</select><!-- /TMPL_IF -->
 				<input type="button" name="insert" value="&gt;&gt;" class="button" onclick="insertValueQuery()" title="Insert" />
 			</td>
 			</tr>
 			</table>
 		</form>
-	</p>
 	
 </div>
 </div>
+
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="serials-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
-
