--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/member-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/member-search.tmpl
@@ -19,31 +19,32 @@ function add_member(subscriptionid,borrowernumber){
 
 <div id="custom-doc" class="yui-t7">
    <div id="bd">
-	<div class="yui-g">
+	
 
 <h1>Member Search</h1>
 
-<p>
+
 <form name="search" action="/cgi-bin/koha/serials/member-search.pl" method="post">
 <input type="text" name="member" size="30" />
-<input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR NAME="subscriptionid" -->">
+<input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR NAME="subscriptionid" -->" />
 <input type="submit" class="button" value="Search" />
 </form>
-</p>
+
 <!-- TMPL_IF NAME="memberloop" -->
 <div class="searchresults">
-<table cellspacing="0" cellpadding="0" border="0" width="480" class="collapse">
-<tr><th>Name</th>
+<table>
+<tr>
+	<th>Name</th>
     <th>Location</th>
-    <th>Add</th></tr>
+    <th>Add</th>
+</tr>
 <!-- TMPL_LOOP NAME="memberloop" -->
 <tr><td><!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></td>
     <td><!-- TMPL_VAR NAME="streetaddress" --></td>
     <td><a href="#" onclick="add_member(<!-- TMPL_VAR
 NAME="subscriptionid" -->,<!-- TMPL_VAR NAME="borrowernumber" -->); return false" href="/cgi-bin/koha/serials/routing.pl?subscriptionid=<!-- TMPL_VAR NAME="subscriptionid" -->&amp;borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;op=add">Add</a></td></tr>
 <!-- /TMPL_LOOP -->
-        </table></td></tr>
-</table>
+        </table>
 </div>
 <!-- TMPL_ELSE -->
     <!-- TMPL_IF NAME="member" -->
@@ -53,7 +54,6 @@ NAME="subscriptionid" -->,<!-- TMPL_VAR NAME="borrowernumber" -->); return false
 
 <p><a href="javascript:window.close()" class="button">Close</a></p>
 
-</div>
 </div>
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
