--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/routing-preview-slip.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/routing-preview-slip.tmpl
@@ -10,17 +10,17 @@
 
 <div id="custom-doc" class="yui-t7">
    <div id="bd">
-	<div class="yui-g">
+	
 
-<table cellspacing="0" cellpadding="0" border="0" class="collapse routingslip">
-<tr><td class="cell" colspan="3"><h3><!-- TMPL_VAR NAME="libraryname" --></h3></td></tr>
-<tr><td class="cell" colspan="3"><b>Title:</b> <!-- TMPL_VAR NAME="title" --><br />
+<table>
+<tr><td colspan="3"><h3><!-- TMPL_VAR NAME="libraryname" --></h3></td></tr>
+<tr><td colspan="3"><b>Title:</b> <!-- TMPL_VAR NAME="title" --><br />
 <!-- TMPL_VAR NAME="issue" --></td></tr>
-<tr><td class="cell"><b>Name/Location</b></td>
-    <td class="cell"><b>Date Due</b></td></tr>
+<tr><td><b>Name/Location</b></td>
+    <td><b>Date Due</b></td></tr>
 <!-- TMPL_LOOP NAME="memberloop" -->
-        <tr><td class="name"><b><!-- TMPL_VAR NAME="name" --></b> <!-- TMPL_VAR NAME="location" --></td>
-            <td class="date">&nbsp;</td></tr>
+        <tr><td><b><!-- TMPL_VAR NAME="name" --></b> <!-- TMPL_VAR NAME="location" --></td>
+            <td>&nbsp;</td></tr>
 <!-- /TMPL_LOOP -->
 </table>
 <p><b>Notes:</b> Please return this journal
@@ -30,7 +30,6 @@ promptly as others are waiting.
    <a class="button" href="javascript:window.print();self.close()">Print</a> &nbsp; <a class="button" href="javascript:self.close()">Close</a>
    </div>
 
-   </div>
    </div>
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
