--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/serials-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/serials-home.tmpl
@@ -4,13 +4,13 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-serials.inc" -->
+<!-- TMPL_INCLUDE NAME="serials-search.inc" -->
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <!--TMPL_IF Name="information"-->
 Serials updated :
@@ -53,8 +53,9 @@ Serials updated :
 <!--/TMPL_LOOP -->
 </table>
 <!--/TMPL_IF-->
-<h1>Serials subscription</h1>
-<h2>Search existing subscription</h2>
+        <!-- TMPL_IF NAME="done_searched"-->
+<h1>Serials subscriptions</h1>
+
 <!-- TMPL_IF NAME="routing" -->
         <h3>Search for Serial Routing List</h3>
 <!-- /TMPL_IF -->
@@ -75,26 +76,7 @@ Serials updated :
               <th colspan="2">&nbsp;</th>
             <!-- /TMPL_IF -->        
         </tr>
-        <tr>
-            <form action="/cgi-bin/koha/serials/serials-home.pl" method="get">
-            <!-- TMPL_IF NAME="routing" -->
-                <input type="hidden" name="routing" value="<!-- TMPL_VAR NAME="routing" -->" />
-            <!-- /TMPL_IF -->
-            <input type="hidden" name="searched" value="1" />
-            <td>
-                <input type="text" size="10" maxlength="11" name="ISSN_filter" value="<!-- TMPL_VAR name="ISSN_filter" -->" title="type ISSN here to filter subscription" />
-            </td>
-            <td>
-                <input type="text" size="40" maxlength="40" name="title_filter" value="<!-- TMPL_VAR name="title_filter" -->" title="type a title -complete or partial- to filter subscription" />
-            </td>
-            <td colspan="2">
-                &nbsp;
-            </td>
-            <td colspan="2">
-                <input type="submit" value="filter" class="button serial" title="set a filter on ISSN / title" />
-            </td>
-        </tr>
-        <!-- TMPL_IF NAME="done_searched"-->
+        
         <!-- TMPL_LOOP name="subscriptions" -->
             <tr>
                 <!-- TMPL_IF name="toggle" -->
@@ -156,12 +138,11 @@ Serials updated :
                 </td>
             </tr>
         <!-- /TMPL_LOOP -->
-        <!-- /TMPL_IF -->
     </table>
     
+        <!-- /TMPL_IF -->
     <!-- TMPL_IF NAME="routing" -->
     <!-- TMPL_ELSE -->
-    	<h2>Add a new subscription</h2>
     	<div id="action">
             <a href="/cgi-bin/koha/serials/subscription-add.pl" class="button serial">
                 Add subscription
@@ -170,7 +151,9 @@ Serials updated :
     <!-- /TMPL_IF -->
 </div>
 </div>
-</div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="serials-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
