--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/serials-recieve.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/serials-recieve.tmpl
@@ -2,7 +2,7 @@
 <title>Koha &rsaquo; Serials</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <script language="JavaScript" type="text/javascript">
-
+//<![CDATA[
 function popup() {
 	window.open("subscription-renew.pl?subscriptionid=<!-- TMPL_VAR
 name="subscriptionid">","subscription_renewal",'width=700,height=400,toolbar=false,scrollbars=yes');
@@ -38,17 +38,18 @@ function barcode_check(){
 	}
     <!-- /TMPL_IF -->
 }
+//]]>
 </script>
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!--TMPL_INCLUDE NAME="menu-serials.inc" -->
+<!-- TMPL_INCLUDE NAME="serials-search.inc" -->
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <h1>Check In subscription for: <!-- TMPL_VAR name="bibliotitle" --></h1>
 <div id="action">
@@ -62,49 +63,39 @@ function barcode_check(){
 
 <h2>waited or late numbers</h2>
 	<form method="post" name="f" action="serials-recieve.pl" onsubmit="return barcode_check()">
-		<input type="hidden" name="op" value="serialchangestatus">
-		<input type="hidden" name="serial" value="<!-- TMPL_VAR name="serial" -->">
-		<input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR name="subscriptionid" -->">
-		<input type="hidden" name="user" value="<!-- TMPL_VAR name="user" -->">
-	<table cellspacing="0" cellpadding="0" border="0" class="collapse">
+		<input type="hidden" name="op" value="serialchangestatus" />
+		<input type="hidden" name="serial" value="<!-- TMPL_VAR name="serial" -->" />
+		<input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR name="subscriptionid" -->" />
+		<input type="hidden" name="user" value="<!-- TMPL_VAR name="user" -->" />
+	<table>
 	<tr>
-		<th>
-			Numbered
-		</th>
-		<th>
-			Published on
-		</th>
-		<th>
-			planned for
-		</th>
-		<th>
-			Status
-		</th>
-		<th>
-			Notes
-		</th>
+		<th>Numbered</th>
+		<th>Published on</th>
+		<th>planned for</th>
+		<th>Status</th>
+		<th>Notes</th>
 	</tr>
 	<!-- TMPL_LOOP name="serialslist" -->
 		<tr>
 			<td>
-				Issue <input type="text" name="serialseq" value="<!-- TMPL_VAR name="serialseq" -->" size="20" maxlength="100">
+				Issue <input type="text" name="serialseq" value="<!-- TMPL_VAR name="serialseq" -->" size="20" maxlength="100" />
 			<!--TMPL_IF Name="serialadditems" -->
 				<br /><br />
-				Callnumber <input type="text" name="itemcallnumber" value="<!--TMPL_VAR NAME="callnumber"-->" size="15" maxlength="100">
-				Barcode <input type="text" name="barcode" value="<!-- TMPL_VAR NAME="barcode"-->" id="barcode<!-- TMPL_VAR NAME="num" -->" size="20" maxlength="20">
+				Callnumber <input type="text" name="itemcallnumber" value="<!--TMPL_VAR NAME="callnumber"-->" size="15" maxlength="100" />
+				Barcode <input type="text" name="barcode" value="<!-- TMPL_VAR NAME="barcode"-->" id="barcode<!-- TMPL_VAR NAME="num" -->" size="20" maxlength="20" />
 			<!--/TMPL_IF -->
 			</td>
 			<td>
-				<input type="text" name="publisheddate" value="<!-- TMPL_VAR name="publisheddate" -->" size="10" maxlength="15">
+				<input type="text" name="publisheddate" value="<!-- TMPL_VAR name="publisheddate" -->" size="10" maxlength="15" />
 			<!--TMPL_IF Name="serialadditems" -->
 				<br /><br />&nbsp;
 			<!--/TMPL_IF  -->
 			</td>
 			<td>
-				<input type="text" name="planneddate" value="<!-- TMPL_VAR name="planneddate" -->" size="10" maxlength="15">
+				<input type="text" name="planneddate" value="<!-- TMPL_VAR name="planneddate" -->" size="10" maxlength="15" />
 			<!--TMPL_IF Name="serialadditems" -->
 				<br /><br />
-				<select name="branch" size="1">
+				<select name="branch">
 						<option value="">Branch</option>
 			<!-- TMPL_LOOP name="branchloop" --><!-- TMPL_IF NAME="selected" --><option value="<!-- TMPL_VAR NAME="value" -->" selected="selected"><!-- TMPL_VAR NAME="branchname" --></option>
 				<!-- TMPL_ELSE -->
@@ -115,8 +106,8 @@ function barcode_check(){
 			<!--/TMPL_IF -->
 			</td>
 			<td>
-				<input type="hidden" name="serialid" value="<!-- TMPL_VAR name="serialid" -->">
-				<select name="status" size="1" id="status<!-- TMPL_VAR NAME="num" -->">
+				<input type="hidden" name="serialid" value="<!-- TMPL_VAR name="serialid" -->" />
+				<select name="status" id="status<!-- TMPL_VAR NAME="num" -->">
 					<!--TMPL_IF name="status1" -->
 						<option value="1" selected="selected">Waited</option>
 					<!-- /TMPL_IF -->
@@ -159,7 +150,7 @@ function barcode_check(){
 							<!-- /TMPL_IF -->
 						<!-- /TMPL_LOOP -->
 				    <!--TMPL_ELSE-->
-					<select name="itemstatus" size="1">
+					<select name="itemstatus">
 						<option value="">Item Status</option>
 						<!-- TMPL_LOOP name="itemstatusloop" -->
 						<!-- TMPL_IF name="selected" -->
@@ -177,11 +168,11 @@ function barcode_check(){
 
 			</td>
 			<td>
-				<input type="text" name="notes" value="<!-- TMPL_VAR name="notes" -->" size="20" maxlength="255">
+				<input type="text" name="notes" value="<!-- TMPL_VAR name="notes" -->" size="20" maxlength="255" />
 			<!--TMPL_IF Name="serialadditems" -->
 				<br /><br />
 				<!--TMPL_IF Name="itemlocation"-->
-					<select name="location" size="1">
+					<select name="location">
 						<option value="">Location</option>
 						<!-- TMPL_LOOP name="itemlocationloop" -->
 						<!-- TMPL_IF name="selected" -->
@@ -201,24 +192,24 @@ function barcode_check(){
 	<!-- TMPL_UNLESS name="hassubscriptionexpired" -->
 		<tr>
 			<td>
-				Manual issue <input type="text" name="serialseq" size="30" maxlength="100" value="<!-- TMPL_VAR NAME="missingseq" -->">
+				Manual issue <input type="text" name="serialseq" size="30" maxlength="100" value="<!-- TMPL_VAR NAME="missingseq" -->" />
 			<!--TMPL_IF Name="serialadditems" -->
 				<br /><br />
-				Callnumber <input type="text" name="itemcallnumber" value="" size="10" maxlength="15">
-				Barcode <input type="text" name="barcode" value="" size="20" maxlength="20">
+				Callnumber <input type="text" name="itemcallnumber" value="" size="10" maxlength="15" />
+				Barcode <input type="text" name="barcode" value="" size="20" maxlength="20" />
 			<!--/TMPL_IF-->
 			</td>
 			<td>
-				<input type="text" name="publisheddate" value="<!-- TMPL_VAR name="publisheddate" -->" size="10" maxlength="15">
+				<input type="text" name="publisheddate" value="<!-- TMPL_VAR name="publisheddate" -->" size="10" maxlength="15" />
 			<!--TMPL_IF Name="serialadditems" -->
 				<br /><br />&nbsp;
 			<!--/TMPL_IF  -->
 			</td>
 			<td>
-				<input type="text" name="planneddate" size="10" maxlength="15" value="<!-- TMPL_VAR NAME="missingdate" -->">
+				<input type="text" name="planneddate" size="10" maxlength="15" value="<!-- TMPL_VAR NAME="missingdate" -->" />
 			<!--TMPL_IF Name="serialadditems" -->
 				<br /><br />
-				<select name="branch" size="1">
+				<select name="branch">
 						<option value="">Branch</option>
 			<!-- TMPL_LOOP name="branchloop" -->
 				<!-- TMPL_IF NAME="selected" --><option value="<!-- TMPL_VAR NAME="value" -->" selected="selected"><!-- TMPL_VAR NAME="branchname" --></option>
@@ -231,11 +222,11 @@ function barcode_check(){
 			</td>
 			<td>
 				<!-- TMPL_IF NAME="frommissing" -->
-				<input type="hidden" name="serialid" value="<!-- TMPL_VAR name="missingid" -->">
+				<input type="hidden" name="serialid" value="<!-- TMPL_VAR name="missingid" -->" />
 				<!-- TMPL_ELSE -->
-				<input type="hidden" name="serialid" value="0">
+				<input type="hidden" name="serialid" value="0" />
 				<!--/TMPL_IF-->
-				<select name="status" size="1">
+				<select name="status">
 						<!-- TMPL_IF NAME="frommissing" -->
 						<option value="2" selected="selected">Arrived</option>
 						<!-- TMPL_ELSE -->
@@ -265,7 +256,7 @@ function barcode_check(){
 							<!-- /TMPL_IF -->
 						<!-- /TMPL_LOOP -->
 				    <!--TMPL_ELSE-->
-					<select name="itemstatus" size="1">
+					<select name="itemstatus">
 						<option value="">Item Status</option>
 						<!-- TMPL_LOOP name="itemstatusloop" -->
 						<!-- TMPL_IF name="selected" -->
@@ -286,7 +277,7 @@ function barcode_check(){
 			<!--TMPL_IF Name="serialadditems" -->
 				<br /><br />
 				<!-- TMPL_IF Name="itemlocation"-->
-					<select name="location" size="1">
+					<select name="location">
 						<option value="">Location</option>
 						<!-- TMPL_LOOP name="itemlocationloop" -->
 						<!-- TMPL_IF name="selected" -->
@@ -304,7 +295,7 @@ function barcode_check(){
 		</tr>
 	<!-- /TMPL_UNLESS -->
 	</table>
-	<input type="submit" value="Save changes" accesskey="w" class="button">
+	<input type="submit" value="Save changes" accesskey="w" class="button" />
 	<!-- TMPL_IF name="hassubscriptionexpired" -->
 		<h3>Subscription has expired.</h3>
 		<p><b>Waited last issue status can't be changed. <a href="#" onclick="popup()" class="button">Renew</a> your subscription</b></p>
@@ -321,28 +312,28 @@ function barcode_check(){
 
 	<h2>Subscription summary</h2>
 	<form method="post" name="f2" action="serials-recieve.pl">
-		<input type="hidden" name="op" value="modsubscriptionhistory">
-		<input type="hidden" name="serial" value="<!-- TMPL_VAR name="serial" -->">
-		<input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR name="subscriptionid" -->">
-		<input type="hidden" name="user" value="<!-- TMPL_VAR name="user" -->">
+		<input type="hidden" name="op" value="modsubscriptionhistory" />
+		<input type="hidden" name="serial" value="<!-- TMPL_VAR name="serial" -->" />
+		<input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR name="subscriptionid" -->" />
+		<input type="hidden" name="user" value="<!-- TMPL_VAR name="user" -->" />
 		<p><label>Librarian</label><!-- TMPL_VAR name="user" --></p>
-		<p><label>Starting date:</label><input type="text" name="histstartdate" value="<!-- TMPL_VAR name="histstartdate" -->"> (the date of the 1st subscription)</p>
-		<p><label>Ending date:</label><input type="text" name="enddate" value="<!-- TMPL_VAR name="enddate" -->">(if empty : subscription still active)</p>
+		<p><label>Starting date:</label><input type="text" name="histstartdate" value="<!-- TMPL_VAR name="histstartdate" -->" /> (the date of the 1st subscription)</p>
+		<p><label>Ending date:</label><input type="text" name="enddate" value="<!-- TMPL_VAR name="enddate" -->" />(if empty : subscription still active)</p>
 		<p>Recieved issues</p>
 		<p><textarea name="recievedlist" cols="60" rows="5"><!-- TMPL_VAR name="recievedlist" --></textarea></p>
 		<p>Missing issues</p>
 		<p><textarea name="missinglist" cols="60" rows="2"><!-- TMPL_VAR name="missinglist" --></textarea></p>
 		<p>Opac's note</p>
 		<p><textarea name="opacnote" cols="60" rows="5"><!-- TMPL_VAR name="opacnote" --></textarea></p>
-		<input type="submit" value="Save changes" class="button">
+		<input type="submit" value="Save changes" class="button" />
 	</form>
 
-</div>
-
 
 </div>
 </div>
-</div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="serials-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
