Fix for template
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/help/nohelp.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/help/nohelp.tmpl
@@ -1,4 +1,7 @@
-<!-- TMPL_INCLUDE NAME="help-top.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->         
+<title>Online Help - No Help available</title>                  
+<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->  
+
 
 	<div id="main-compact">
 	<h1>Online Help</h1>
@@ -10,4 +13,7 @@
 </form>
 	</div>
 	
-<!-- TMPL_INCLUDE NAME="help-bottom.inc" -->
+<!-- TMPL_INCLUDE name="intranet-bottom.inc" -->             
+
+
+
