--- a/koha-tmpl/intranet-tmpl/prog/en/modules/help/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/help/circ/circulation.tmpl
@@ -17,4 +17,4 @@
 
 <p>If the issuing is problematic, then another box will appear and ask for confirmation if possible. If the issuing is really impossible (for example, the barcode does not exist), then you can't confirm the issue. If it is possible but has something that needs confirmation (like item being issued to another patron, or patron having issued too many items), then you must confirm the issuing. If the confirmation means another operation (if item is issued to another patron, then issuing also means make the return), then it's also done</p>
 
-<!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
+<!-- TMPL_INCLUDE name="help-bottom.inc" -->
