Adding TinyMCE Rich Text Editor for editing User Contributed Help pages
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/help/edithelp.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/help/edithelp.tmpl
@@ -1,4 +1,4 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Online Help: No help for this topic!<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<html><head><title>TinyMCE Test</title><script language="javascript" type="text/javascript" src="/prog/en/js/tiny_mce/tiny_mce.js"></script><script language="javascript" type="text/javascript">tinyMCE.init({	mode : "textareas"});</script></head><body>
 
 	<div id="main-compact">
 	<h1>Online Help</h1>
