--- a/koha-tmpl/intranet-tmpl/prog/en/modules/help/edithelp.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/help/edithelp.tmpl
@@ -5,6 +5,19 @@
 <script language="javascript" type="text/javascript">
 tinyMCE.init({
 	mode : "textareas"
+        theme : "advanced",
+	plugins : "table,save,advhr,advlink,iespell,insertdatetime,preview,searchreplace,print,contextmenu",
+	theme_advanced_buttons1_add_before : "save,separator",
+	theme_advanced_buttons1_add : "",
+	theme_advanced_buttons2_add : "separator,insertdate,inserttime,preview,zoom,separator",
+	theme_advanced_buttons2_add_before: "cut,copy,paste,separator,search,replace,separator",
+	theme_advanced_buttons3_add_before : "tablecontrols,separator",
+	theme_advanced_buttons3_add : "iespell,advhr,separator,print",
+	theme_advanced_toolbar_location : "top",
+	theme_advanced_toolbar_align : "left",
+	theme_advanced_path_location : "bottom",
+	plugin_insertdate_dateFormat : "%Y-%m-%d",
+	plugin_insertdate_timeFormat : "%H:%M:%S",
 });
 </script>
 </head>
