--- a/koha-tmpl/intranet-tmpl/prog/en/modules/help/edithelp.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/help/edithelp.tmpl
@@ -4,7 +4,7 @@
 <script language="javascript" type="text/javascript" src="/intranet-tmpl/prog/en/js/tinymce/jscripts/tiny_mce/tiny_mce.js"></script>
 <script language="javascript" type="text/javascript">
 tinyMCE.init({
-	mode : "textareas"
+	mode : "textareas",
         theme : "advanced",
 	plugins : "table,save,advhr,advlink,iespell,insertdatetime,preview,searchreplace,print,contextmenu",
 	theme_advanced_buttons1_add_before : "save,separator",
