--- a/koha-tmpl/intranet-tmpl/prog/en/modules/help/edithelp.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/help/edithelp.tmpl
@@ -6,10 +6,9 @@
 tinyMCE.init({
 	mode : "textareas",
         theme : "advanced",
-	plugins : "table,save,advhr,advlink,iespell,insertdatetime,preview,searchreplace,print,contextmenu",
+	plugins : "table,save,advhr,advlink,iespell,searchreplace,print,contextmenu",
+        theme_advanced_disable : "underline,strikethrough,styleselect,img"
 	theme_advanced_buttons1_add_before : "save,separator",
-	theme_advanced_buttons1_add : "",
-	theme_advanced_buttons2_add : "separator,insertdate,inserttime,preview,zoom,separator",
 	theme_advanced_buttons2_add_before: "cut,copy,paste,separator,search,replace,separator",
 	theme_advanced_buttons3_add_before : "tablecontrols,separator",
 	theme_advanced_buttons3_add : "iespell,advhr,separator,print",
