--- a/koha-tmpl/intranet-tmpl/prog/en/modules/help/edithelp.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/help/edithelp.tmpl
@@ -7,7 +7,7 @@ tinyMCE.init({
 	mode : "textareas",
         theme : "advanced",
 	plugins : "table,save,advhr,advlink,iespell,searchreplace,print,contextmenu",
-        theme_advanced_disable : "underline,strikethrough,styleselect,img"
+        theme_advanced_disable : "underline,strikethrough,styleselect,img",
 	theme_advanced_buttons1_add_before : "save,separator",
 	theme_advanced_buttons2_add_before: "cut,copy,paste,separator,search,replace,separator",
 	theme_advanced_buttons3_add_before : "tablecontrols,separator",
